objects/ssot__CoverageBenefit__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BenefitInformationText__c</fullName>
        <label>Benefit Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitNotes__c</fullName>
        <label>Benefit Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitPeriodEndDate__c</fullName>
        <label>Benefit Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitPeriodStartDate__c</fullName>
        <label>Benefit Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CoinsuranceNoteText__c</fullName>
        <label>Coinsurance Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CopayNoteText__c</fullName>
        <label>Copay Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CoverageType__c</fullName>
        <label>Coverage Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeductibleNoteText__c</fullName>
        <label>Deductible Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisclaimerText__c</fullName>
        <label>Disclaimer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmergencyTreatmentCopayAmount__c</fullName>
        <label>Emergency Treatment Copay Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FinalCoverageStatusCodeId__c</fullName>
        <label>Final Coverage Status Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__INNIndividualDeductibleRemainingAmt__c</fullName>
        <label>In-Network Indv Ded Rmn Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Coverage Benefit Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkCoinsuranceAmount__c</fullName>
        <label>In-Network Coinsurance Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkCoinsurancePercent__c</fullName>
        <label>In Network Coinsurance Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkFamilyDeductibleAmount__c</fullName>
        <label>In-Network Family Deductible Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkFamilyOOPRemainingAmount__c</fullName>
        <label>In-Network Family OOP Rmn Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkFamilyOutofPocketAmount__c</fullName>
        <label>In-Network Family OOP Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkIndividualDeductibleAmount__c</fullName>
        <label>In-Network Individual Ded Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkIndividualOutofPocketAmt__c</fullName>
        <label>In-Network Indv OOP Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkIndividualOutofPocketLimitAmt__c</fullName>
        <label>In-Network Indv OOP Limit Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNtwkFamilyDeductibleLimitAmt__c</fullName>
        <label>In Ntwk Family Deductible Limit Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNtwkFamilyDeductibleRemainingAmt__c</fullName>
        <label>In Ntwk Family Deductible Remaining Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNtwkFamilyOutofPocketLimitAmt__c</fullName>
        <label>In Ntwk Family Out Of Pocket Limit Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNtwkIndividualDeductibleLimitAmt__c</fullName>
        <label>In Ntwk Individual Deductible Limit Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNtwkIndividualOutofPocketRemainingAmt__c</fullName>
        <label>In Ntwk Individual OOP Remaining Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNtwkLifetimeCoverageMaximumAmt__c</fullName>
        <label>In Ntwk Lifetime Coverage Maximum Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LifetimeMaximumPaymentNoteText__c</fullName>
        <label>Lifetime Maximum Payment Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberId__c</fullName>
        <label>Member</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberPlanId__c</fullName>
        <label>Member Plan</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OutcomeStatusCodeId__c</fullName>
        <label>Outcome Status Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNetworkCoinsuranceAmount__c</fullName>
        <label>Out-of-Network Coinsurance Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNetworkCoinsurancePercent__c</fullName>
        <label>Out Of Network Coinsurance Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNetworkFamilyDeductibleAmount__c</fullName>
        <label>Out-of-Network Family Ded Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNetworkFamilyOutofPocketAmount__c</fullName>
        <label>Out-of-Network Family OOP Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkFamilyDeductibleLimitAmt__c</fullName>
        <label>Out-of-Network Family Ded Limit Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkFamilyDeductibleRemainingAmt__c</fullName>
        <label>Out-of-Network Family Ded Rmn Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkFamilyOutofPocketLmtAmt__c</fullName>
        <label>Out-of-Network Family OOP Limit Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkFamilyOutofPocketRemainingAmt__c</fullName>
        <label>Out-of-Network Family OOP Rmn Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkIndividualDedRemainingAmt__c</fullName>
        <label>Out-of-Network Indv Ded Rmn Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkIndividualDeductibleAmt__c</fullName>
        <label>Out Of Ntwk Individual Deductible Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkIndividualDeductibleLimitAmt__c</fullName>
        <label>Out Of Ntwk Indv Deductible Lmt Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkIndividualOutofPocketAmt__c</fullName>
        <label>Out Of Ntwk Individual Out Of Pocket Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkIndvOutofPocketLmtAmt__c</fullName>
        <label>Out Of Ntwk Indv Out Of Pocket Lmt Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkIndvOutofPocketRemainAmt__c</fullName>
        <label>Outof Ntwk Indv Outof Pocket Remain Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkLifetimeCoverageMaximumAmt__c</fullName>
        <label>Out Of Ntwk Lifetime Coverage Max Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofPocketPaymentNoteText__c</fullName>
        <label>Out Of Pocket Payment Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryCareCopayAmount__c</fullName>
        <label>Primary Care Copay Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModifiedDate__c</fullName>
        <label>Source System Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemName__c</fullName>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SpecialistConsultationCopayAmount__c</fullName>
        <label>Specialist Consultation Copay Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StatusCodeId__c</fullName>
        <label>Status Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UrgentCareCopayAmount__c</fullName>
        <label>Urgent Care Copay Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VerificationDate__c</fullName>
        <label>Verification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726055485_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CoverageBenefit_MemberId_map_Account_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>CoverageBenefit_MemberId_map_Account_rel</relationshipLabel>
        <relationshipName>rel_1716726055485_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726059344_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CoverageBenefit_MemberPlanId_map_Mem_rel</label>
        <referenceTo>ssot__MemberPlan__dlm</referenceTo>
        <relationshipLabel>CoverageBenefit_MemberPlanId_map_Mem_rel</relationshipLabel>
        <relationshipName>rel_1716726059344_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723779545974_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CoverageBenefit_StatusCodeId_map_Cod_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>CoverageBenefit_StatusCodeId_map_Cod_rel</relationshipLabel>
        <relationshipName>rel_1723779545974_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>